# gluex

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  README.md  about.html  agents.html  basics.html  fund.html  goals.html  index.html  leaders.html  tools.html
.github/: workflow.yml
.github/workflows/: glueu.yml
_next/static/2i_atTKOJnMh8gCnAHHfw/: _buildManifest.js
_next/static/2tFl5RT-rTWLJw6aJFbvc/: _buildManifest.js
_next/static/34obWKInIFxbBd8UumjS7/: _buildManifest.js
_next/static/3n_EVe47JWXUMiqXLi62-/: _buildManifest.js
_next/static/4chkJffh9QDC5dTk6hmES/: _buildManifest.js
_next/static/75N_5X3bwQAhIDfKksQl1/: _buildManifest.js
_next/static/9RFjAuOY7JhjfGT9PjQDI/: _buildManifest.js
_next/static/ApRmBqK6ePY8yuWXdR58T/: _buildManifest.js
_next/static/Bo7sFd6a2d40ydtDS58MB/: _buildManifest.js
_next/static/Egk4b_GxQbNeWFYKCGSK3/: _buildManifest.js
app/: AGENTS.md  generate-mermaid-urls.js  next.config.js  package-lock.json  package.json
program/: AGENTS.md  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
program/programs/gluex/: Cargo.toml
program/programs/gluex/src/: define.rs  lib.rs
program/programs/gluex/src/instructions/: bounty.rs  create.rs  fee.rs  manage.rs  mod.rs  profile.rs
program/programs/gluex/src/state/: bounty_state.rs  constraints.rs  errors.rs  mod.rs  profile_state.rs  user_state.rs  user_state_impl.rs
program/scripts/: migrate-fee-pool.ts  migrate-goal.ts
program/tests/: fee_pool.test.ts  gamified_bounty.test.ts  glueu.ts  gluex.ts
skills/gluex_interaction/: SKILL.md
(+257 files in other folders)
